@@ -39,8 +39,11 @@ enum wxEllipsizeFlags
                                 wxELLIPSIZE_FLAGS_EXPAND_TABS
 };
 
+// NB: Don't change the order of these values, they're the same as in
+//     PangoEllipsizeMode enum.
 enum wxEllipsizeMode
 {
+    wxELLIPSIZE_NONE,
     wxELLIPSIZE_START,
     wxELLIPSIZE_MIDDLE,
     wxELLIPSIZE_END
